[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/zombot/Zombot.gd" type="Script" id=1]
[ext_resource path="res://scenes/zombot/assets/zombot_off.png" type="Texture" id=2]
[ext_resource path="res://scenes/zombot/assets/zombot_on.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 21.2351, 32.0729 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 2 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 20.4885, 31.2925 )

[sub_resource type="OccluderPolygon2D" id=5]
polygon = PoolVector2Array( -21.1294, -23.9739, 20.9284, -24.2242, 21.429, 39.1127, -21.6301, 39.1127 )

[node name="Zombot" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="AttackArea" type="Area2D" parent="."]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2( 0, 7.4895 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/zombot_off = SubResource( 2 )
anims/zombot_on = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 7.15 )
shape = SubResource( 4 )

[node name="ActivationTimer" type="Timer" parent="."]
wait_time = 0.52
one_shot = true

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource( 5 )
[connection signal="body_entered" from="AttackArea" to="." method="_on_AttackArea_body_entered"]
[connection signal="timeout" from="ActivationTimer" to="." method="_on_ActivationTimer_timeout"]
